--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,5 +24,8 @@ jobs:
     - name: Add .NET Tools to PATH
       run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-    - name: Build Documentation with DocFX
-      run: docfx ${{ github.workspace }}/docfx/docfx.json
+    # - name: Build Documentation with DocFX
+      # run: docfx ${{ github.workspace }}/docfx/docfx.json
+
+    - name: Create new folder
+      run: mkdir test
