--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,15 +31,15 @@ jobs:
     - name: Add .NET Tools to PATH
       run: echo "$HOME/.dotnet/tools" >> $GITHUB_PATH
 
-    # - name: Build Documentation with DocFX
-      # run: docfx ${{ github.workspace }}/docfx/docfx.json
+    - name: Build Documentation with DocFX
+      run: docfx docfx/docfx.json
 
-    - name: Create new folder
-      run: |
-        mkdir -p test
-        touch test/.gitkeep
-        git config --global user.email "stocker.leonhard@gmail.com"
-        git config --global user.name "LS"
-        git add test/.gitkeep
-        git commit -m "Add 'test' folder with .gitkeep"
-        git push https://${{ secrets.DOCFX_SECRET }}@github.com/Deputy-Chief-Hardy/docfx-testproject.git HEAD:${GITHUB_REF#refs/heads/}
+    # - name: Create new folder
+      # run: |
+        # mkdir -p test
+        # touch test/.gitkeep
+        # git config --global user.email "stocker.leonhard@gmail.com"
+        # git config --global user.name "LS"
+        # git add test/.gitkeep
+        # git commit -m "Add 'test' folder with .gitkeep"
+        # git push https://${{ secrets.DOCFX_SECRET }}@github.com/Deputy-Chief-Hardy/docfx-testproject.git HEAD:${GITHUB_REF#refs/heads/}
